Resolve Hannan cross references
